<resources>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="app_name">My Application</string>

    <!-- Strings related to login -->
    <string name="prompt_fullName">Full Name</string>
    <string name="prompt_characterName">Character Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_verification">Verify password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_match">These inputs do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_username">This username is already taken</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_app">MainApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="settings">Settings</string>
    <string name="ranking">Ranking</string>
    <string name="history">History</string>
    <string name="play">Play</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="privacy">Privacy</string>
    <string name="preferences">Preferences</string>
    <string name="image">image</string>
    <string name="label1">label1</string>
    <string name="vibrations">Vibrations</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="confirm_password">Confirm password</string>
    <string name="score">Score</string>
    <string name="map_activity_name">MapActivity</string>
    <string name="score_string">Your current score is:</string>
    <string name="pet">PET</string>
    <string name="hello_please_click_on_a_paw">Hello! Please click on a paw!</string>
    <string name="title_activity_success">SuccessActivity</string>
    <string name="success">Success!!</string>
    <string name="done">Done</string>
    <string name="again">Again</string>
    <string name="password">password</string>

</resources>
