<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <Button
        android:id="@+id/Again"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp"
        android:layout_marginStart="12dp"
        android:text="@string/again"
        android:visibility="visible" />

    <Button
        android:id="@+id/Done"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/Again"
        android:layout_marginEnd="22dp"
        android:text="@string/done" />

    <EditText
        android:id="@+id/success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Again"
        android:layout_marginStart="28dp"
        android:layout_marginTop="161dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:text="@string/success"
        android:theme="@style/Base.TextAppearance.AppCompat.Large" />
</RelativeLayout>