<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wallet_highlighted_text_holo_light">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:labelFor="@+id/editText"
        android:text="PROFILE"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold"
        android:theme="@style/AlertDialog.AppCompat.Light" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sign_out"
        android:layout_below="@+id/sign_out"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="34dp"
        android:clickable="false"
        android:contentDescription="@string/image"
        android:labelFor="@+id/profile_pic"
        android:scaleX="2"
        android:scaleY="2"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:labelFor="@+id/preferences"
        android:text="@string/preferences"
        android:textColor="@color/characterNameColor" />

    <Button
        android:id="@+id/sign_out"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/editText"
        android:text="@string/sign_out"
        android:visibility="visible"
        android:layout_alignBottom="@+id/editText" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:labelFor="@+id/name"
        android:text="@string/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPassword"
        android:labelFor="@+id/name"
        android:text="@string/password" />

    <Switch
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/preferences"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="Difficulty: Easy->Hard"
        android:textColor="@color/characterNameColor"
        android:textStyle="bold"
        android:trackTint="@color/fullNameColor"
        android:visibility="visible" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/difficulty"
        android:layout_alignBottom="@+id/difficulty"
        android:layout_marginStart="44dp"
        android:layout_toEndOf="@+id/difficulty"
        android:splitTrack="false"
        android:text="@string/privacy"
        android:textColor="@color/characterNameColor"
        android:textStyle="bold"
        android:trackTint="@color/fullNameColor" />

    <Button
        android:id="@+id/reset"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="Reset Game" />

</RelativeLayout>
