<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/poney"
    android:gravity="right|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="cs65.confuse.LoginActivity">


    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.40"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="right"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="top"
                android:weightSum="1">

                <Button
                    android:id="@+id/button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:text="I ALREADY HAVE AN ACCOUNT"
                    android:textColor="#614051"
                    android:textSize="14sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColorHint="@color/characterNameColor">

                <EditText

                    android:id="@+id/characterName"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_characterName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/characterNameColor" />

                <CheckBox
                    android:id="@+id/availableButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="Available"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/fullNameColor">

                <EditText
                    android:id="@+id/fullName"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_fullName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/fullNameColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/passwordColor">

                <EditText
                    android:id="@+id/password"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/passwordColor" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="2.50"
                android:includeFontPadding="true"
                android:text="@string/action_sign_in"
                android:textColor="#7D1B7E"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/cameraView"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@android:drawable/ic_menu_camera"
                 />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

</LinearLayout>



